# euclidius_old2

./: .env  .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: user.rs
migration/: Cargo.toml
migration/src/: lib.rs
migration/src/v0_1_0/: m20240702_000001_create_users_table.rs  mod.rs
src/: main.rs
src/routing/: mod.rs  page.rs  root.rs
