[package]
name = "euclidius"
version = "0.1.0"
edition = "2021"
authors = ["Ahraman <ahraman.programming@gmail.com>"]

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4.38" }
dotenvy = { version = "0.15.7" }

tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
axum = { version = "0.7.5", features = ["tokio", "macros"] }

sea-orm = { version = "0.12.15", features = [
    "runtime-tokio",
    "sqlx-postgres",
    "with-chrono",
] }
