[package]
name = "euclidius-entity"
version = "0.1.0"
edition = "2021"
authors = ["Ahraman <ahraman.programming@gmail.com>"]

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4.38" }

sea-orm = { version = "0.12.15", features = [
    "runtime-tokio",
    "sqlx-postgres",
    "with-chrono",
] }
